--- a/www/public/index.html
+++ b/www/public/index.html
@@ -9,6 +9,6 @@
     <h1>
         Snake game
     </h1>
-    <script src="./index.js"></script>
+    <script type="text/javascript" src="./bootstrap.js"></script>
 </body>
 </html>
