--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
+    <style>
+        .content_wrapper{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+    </style>
 </head>
 <body>
-    <h1>
-        Snake game
-    </h1>
+
+    <div class="content_wrapper">
+        <canvas id="snake_canves"></canvas>
+    </div>
     <script type="text/javascript" src="./bootstrap.js"></script>
 </body>
 </html>
